date views wrap fix

--- a/src/css/messages.scss
+++ b/src/css/messages.scss
@@ -301,6 +301,7 @@
   right: -4px;
   bottom: -4px;
   margin-left: 6px;
+  white-space: nowrap;
   cursor: default;
   .message-out & {
     color: #65AB5A;
